<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">TempMeasure</string>
    <string name="app_settings">Settings</string>
    <!-- options_menu item names -->
    <string name="menu_share">Share with Facebook</string>
    <string name="menu_setting">Settings</string>
    <!-- preference keys -->
    <string name="pref_tap">preftap</string>
    <string name="pref_time">preftime</string>
    <string name="pref_mac">Mac address</string>
    <string name="scan_mac">Scan mac address</string>
    <string name="mac_set">Macset</string>
    <!-- preference summary -->
    <string name="sum_mac">Not set, tap to edit</string>
    <string name="sum_scan">Tap to scan QR</string>
    <!-- div text strings -->
    <string name="text_refresh">Tap screen to update</string>
    <string name="text_temp">+00.000</string>
    <string name="text_max">-99.99</string>
    <string name="text_min">+99.99</string>
    <string name="text_lastreset">Last reset: never</string>
    <string name="text_lastupdate">Last updated: never</string>
    <!-- test -->
</resources>
